--- a/google.html
+++ b/google.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <style> /* Bu bölümde Css kodları ile özelleştirmeler yaptım.Alışkanlık
+     olmasını istediğim için elimden geldiğince çok class kullanmaya çalıştım. */
         .div1{
         margin-top: 300px; 
-        margin-left: %50;
         text-align: center;
     }
     .div2{
@@ -23,13 +23,15 @@
         margin-top: 1px;
     }
     .maindiv{
-        justify-content: space-between;
+        justify-content: space-between; /* uzun zamandır ara ara css 
+        çalıştığım için videoları izlemeden yapmak istedim. takıldığım yerlerde
+        googleda arama yaptım ve justify-content özelliğini arama yaparken buldum. */
     }
     .mavi1{
         padding-top: 30px;
         text-align: center;
         float: left;
-        background-color: aqua;
+        background-color: aqua; /* Renk konusunda birebir aynı olmasına gerek yok diye düşündüm benzer renkler tercih ettim */
         width: 700px;
         height: 100px;
         margin-left: 20px; 
@@ -63,9 +65,9 @@
    }
     </style>
 </head>
-<body>
+<body>   
     <div class="div1">
-        <img src="google.jpg" />
+    <img src="google.jpg" />
     </div>
     <div class="div2">
         <a>Search the web using Google!</a><br>
